<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/spacing_vertical"
        android:orientation="vertical" >
        <include
            android:id="@+id/common_actionbar"
            layout="@layout/include_action_bar"
            />

        <ImageView
            android:layout_marginTop="5dp"
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/icon_size_my"
            android:layout_height="@dimen/icon_size_my"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_default_qun_mini"
            android:visibility="gone"
            />


            <com.wiz.dev.wiztalk.view.WrapContentHeightGridView
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:cacheColorHint="@android:color/transparent"
                android:layout_marginTop="5dp"
                android:numColumns="4"
                android:paddingBottom="@dimen/spacing_vertical"
                android:paddingTop="@dimen/spacing_vertical"
                android:scrollbars="none" />




            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/trQun"
                android:background="@drawable/list_selector"
                android:clickable="true"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="10dp"
                    android:text="@string/qun_name_key" />

                <TextView
                    android:id="@+id/tvQun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="我的群"
                    android:layout_marginRight="10dp"
                    android:textColor="@android:color/darker_gray"
                     />
            </RelativeLayout>


        <Button
            android:id="@+id/btnSenMsg2Group"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/divider_bar_h"
            android:background="@drawable/btn_green"
            android:text="@string/chat_detail_send_msg"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/btnQuitQun"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/divider_bar_h"
            android:background="@drawable/btn_red"
            android:text="@string/chat_detail_exit_qun"
            android:textColor="@android:color/white"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>